[project]
name = "bicleaner"
version = "0.17.3"
description = "Parallel corpus classifier, indicating the likelihood of a pair of sentences being mutual translations or not"
readme = "README.md"
maintainers = [
    { name = "Marta Bañón", email = "mbanon@prompsit.com" },
    { name = "Jaume Zaragoza", email = "jzaragoza@prompsit.com" },
    { name = "Tudor Nicolae Mateiu", email = "tudornm@prompsit.com" },
]
requires-python = ">=3.8"
dependencies = [ "regex",
    "scikit-learn==1.1.3",
    "PyYAML",
    "numpy",
    "scipy>=1.5.4",
    "pytest",
    "pycld2==0.41",
    "toolwrapper>=0.4.1,<=2.1.0",
    "joblib",
    "sacremoses==0.0.53",
    "bicleaner-hardrules==2.8.1",
]
classifiers = [ "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Filters",
]


[[project.authors]]
name = "Prompsit Language Engineering"
email = "info@prompsit.com"

[project.license]
text = "GNU General Public License v3.0"

[build-system]
requires = [ "setuptools>=61.2,<66",]
build-backend = "setuptools.build_meta"

[project.scripts]
bicleaner-classify = "bicleaner.bicleaner_classifier_full:main"
bicleaner-classify-lite = "bicleaner.bicleaner_classifier_lite:main"
bicleaner-train = "bicleaner.bicleaner_train:main"
bicleaner-download = "bicleaner.bicleaner_download:main"

[project.urls]
Homepage = "https://github.com/bitextor/bicleaner"
"Bicleaner on GitHub" = "https://github.com/bitextor/bicleaner"
"Prompsit Language Engineering" = "http://www.prompsit.com"
"Bicrawler & Bicleaner" = "https://bicrawler.com"
Paracrawl = "https://paracrawl.eu/"
